--- a/LIB/LIB.csproj
+++ b/LIB/LIB.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Data\ModelRegistry.cs" />
     <Compile Include="Data\ModelT.cs" />
     <Compile Include="Data\MTest.cs" />
+    <Compile Include="Data\MUserSession.cs" />
     <Compile Include="Data\MUserEvent.cs" />
     <Compile Include="EncodedStringWriter.cs" />
     <Compile Include="Extensions\EDataRow.cs" />
@@ -72,21 +73,21 @@
     <Compile Include="ModelList.cs" />
     <Compile Include="ModelObject.cs" />
     <Compile Include="Models\Test.cs" />
-    <Compile Include="MSMQ\IO.cs" />
-    <Compile Include="MSMQ\QueueHandler.cs" />
+    <Compile Include="Q\IO.cs" />
+    <Compile Include="Q\QueueHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueueConnection.cs" />
+    <Compile Include="QueuePath.cs" />
     <Compile Include="SerializableDictionary.cs" />
-    <Compile Include="Sessions\EUserEvent.cs" />
+    <Compile Include="Data\EUserEvent.cs" />
     <Compile Include="Sessions\EUserSession.cs" />
     <Compile Include="Sessions\IUserSession.cs" />
     <Compile Include="Models\UserEvents.cs" />
     <Compile Include="Sessions\UserSession.cs" />
     <Compile Include="StringCheck.cs" />
-    <Compile Include="AgeCheck.cs" />
+    <Compile Include="Age.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="MSMQ\Monitor\" />
+    <Folder Include="Q\Monitor\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
